syntax = "proto3";

package user;


service StreamGreeter {
  // 获取用户信息
  rpc GetUserInfo(GetUserInfoRequest) returns (GetUserInfoResponse) ;

  // 获取用户信息-手机号
  rpc GetUserInfoByPhone(GetUserInfoByPhoneRequest) returns (GetUserInfoByPhoneResponse);

  // 检查用户是否注册-手机号
  rpc CheckUserByPhone(CheckUserByPhoneRequest) returns(CheckUserByPhoneResponse);

  // 根据邀请码获取邀请人
  rpc GetUserInfoByInviteCode(GetUserByInviteCodeRequest) returns (GetUserByInviteCodeResponse);

  // 注册用户
  rpc Register(RegisterRequest) returns (RegisterResponse);

  // 验证码
  rpc GenVerifyCode(GenVerifyCodeRequest) returns(GenVerifyCodeResponse);

  // 登录
  rpc LoginUser(LoginUserRequest) returns (LoginUserResponse);

  // 重置登录密码
  rpc PasswordReset(PasswordResetRequest) returns (PasswordResetResponse);

  // 更新用户登录态
  rpc UpdateUserLoginState(UpdateUserLoginStateRequest) returns (UpdateUserLoginStateResponse);

  // 修改用户收货信息
  rpc ModifyUserDeliveryInfo(ModifyUserDeliveryInfoRequest) returns (ModifyUserDeliveryInfoResponse);

  // 获取用户收货信息
  rpc GetUserDeliveryInfo(GetUserDeliveryInfoRequest) returns (GetUserDeliveryInfoResponse);

  // 查找用户信息
  rpc FindUserInfo(FindUserInfoRequest) returns (FindUserInfoResponse);

  // 用户账户充值
  rpc UserAccountCharge(UserAccountChargeRequest) returns (UserAccountChargeResponse);

  // 检查用户收货地址
  rpc CheckUserDeliveryInfo(CheckUserDeliveryInfoRequest) returns (CheckUserDeliveryInfoResponse);

  // 检查用户状态
  rpc CheckUserState(CheckUserStateRequest) returns (CheckUserStateResponse);

  // 获取用户accountId
  rpc GetUserAccountId(GetUserAccountIdRequest) returns (GetUserAccountIdResponse);

  // 列表所有用户
  rpc ListUserInfo(ListUserInfoRequest) returns (ListUserInfoResponse);

  // 搜索用户
  rpc SearchUserInfo(SearchUserInfoRequest) returns (SearchUserInfoResponse);

  // 负载均衡测试
  rpc LoadBalanceTest(LoadBalanceTestRequest) returns (LoadBalanceTestResponse);
}



message RegisterRequest {
  string username = 1;
  string password = 2;
  string password_confirm = 3;
  string email = 4;
  string phone = 5;
  string avatar = 6;

}

message RegisterResponse {
  int64 user_id = 1;
  string message = 2;
}

message LoginRequest {
  string username = 1;
  string password = 2;
}

message LoginResponse {
  int64 user_id = 1;
  string token = 2;
  string message = 3;
}

message GetUserInfoRequest {
  int64 user_id = 1;
}

message GetUserInfoResponse {
  int64 user_id = 1;
  string username = 2;
  string email = 3;
  string phone = 4;
  string avatar = 5;
  string created_at = 6;
}

message UpdateUserInfoRequest {
  int64 user_id = 1;
  string email = 2;
  string phone = 3;
  string avatar = 4;
}

message UpdateUserInfoResponse {
  bool success = 1;
  string message = 2;
}